Layout do aplicativo de Investimento sem funcionalidades de cálculo.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
             android:layout_height="70dp"
             android:layout_weight="0"
             android:background="#013024"
-            app:srcCompat="@drawable/fINANCE" />
+            app:srcCompat="@drawable/finance" />
 
         <TextView
             android:id="@+id/textView10"
@@ -77,7 +77,8 @@
             android:hint="    Valor em R$ EX: 1500.00"
             android:inputType="text"
             android:minHeight="48dp"
-            android:textColorHint="#7A7777" />
+            android:textColorHint="#7A7777"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/textView16"
@@ -95,7 +96,8 @@
             android:hint="    EX: 100.00"
             android:inputType="text"
             android:minHeight="48dp"
-            android:textColorHint="#7A7777" />
+            android:textColorHint="#7A7777"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/textView17"
@@ -113,7 +115,8 @@
             android:hint="    Em meses"
             android:inputType="text"
             android:minHeight="48dp"
-            android:textColorHint="#7A7777" />
+            android:textColorHint="#7A7777"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/textView18"
@@ -131,7 +134,8 @@
             android:hint="    EX: 0.10"
             android:inputType="text"
             android:minHeight="48dp"
-            android:textColorHint="#7A7777" />
+            android:textColorHint="#7A7777"
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/btnCalcular"
@@ -140,6 +144,7 @@
             android:layout_gravity="center"
             android:backgroundTint="#AC8D3F"
             android:fontFamily="@font/ar_one_sans_bold"
+            android:onClick="calcular"
             android:text="Calcular"
             android:textColor="#013024"
             android:textSize="20sp"
@@ -150,9 +155,11 @@
             android:layout_width="match_parent"
             android:layout_height="84dp"
             android:ems="10"
-            android:hint="                                       R$0.00"
+            android:gravity="center_horizontal|center_vertical"
+            android:hint="R$0.00"
             android:inputType="text"
-            android:textColorHint="#7E7C7C" />
+            android:textColorHint="#7E7C7C"
+            android:textSize="34sp" />
 
     </LinearLayout>
 
